--- a/apps/ui-test-app/index.html
+++ b/apps/ui-test-app/index.html
@@ -18,6 +18,8 @@
     <link rel="preload" href="/fonts/Inter/InterDisplay-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/Inter/InterDisplay-Medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/Inter/InterDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Inter/Inter-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Inter/InterDisplay-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
