--- a/apps/ui-test-app/index.html
+++ b/apps/ui-test-app/index.html
@@ -20,6 +20,10 @@
     <link rel="preload" href="/fonts/Inter/InterDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/Inter/Inter-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/Inter/InterDisplay-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="#2F8AF5">
+    <meta name="format-detection" content="telephone=no">
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
