added connect wallet view

--- a/apps/ui-test-app/index.html
+++ b/apps/ui-test-app/index.html
@@ -25,7 +25,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#2F8AF5">
     <meta name="format-detection" content="telephone=no">
   </head>
-  <body>
+  <body style="overflow: auto !important;">
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
