--- a/apps/dapp/index.html
+++ b/apps/dapp/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>dApp</title>
-    <base href="/" />
+    <base href="<%= baseHref %>" />
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
