--- a/apps/dapp/index.html
+++ b/apps/dapp/index.html
@@ -10,6 +10,7 @@
     <link rel="preload" href="fonts/Inter/Inter-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/Inter/Inter-Medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/Inter/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="audio/unicorn-run.mp3" as="audio" type="audio" crossorigin>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes"/>
