--- a/apps/dapp/index.html
+++ b/apps/dapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>dApp</title>
+    <title>1inch dApp</title>
     <base href="<%= baseHref %>" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -12,9 +12,9 @@
     <link rel="preload" href="fonts/Inter/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="audio/unicorn-run.mp3" as="audio" type="audio" crossorigin>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
+    <meta name="apple-mobile-web-app-title" content="1inch dApp" />
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="#2F8AF5">
     <meta name="format-detection" content="telephone=no">
   </head>
   <body>
