--- a/apps/dapp/index.html
+++ b/apps/dapp/index.html
@@ -7,6 +7,9 @@
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
+    <link rel="preload" href="src/main.ts" as="script">
+    <script type="module" src="src/main.ts" async></script>
+
     <link rel="preload" href="fonts/Inter/Inter-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/Inter/Inter-Medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/Inter/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
@@ -44,7 +47,6 @@
     <link rel="apple-touch-icon" sizes="1024x1024" href="icons/ios/1024.png"/>
   </head>
   <body>
-    <script type="module" src="src/main.ts"></script>
     <noscript>
       You browser dont support JavaScript
     </noscript>
