feat: Update interactive touch for mobile notifications
This commit introduces multiple updates related to the interactive touch feature of mobile notifications. Changes to the swipe functionalities, visual transitions, and animation sequences have been made to improve user experience. New helper functions were also introduced for better color handling and CSS settings. A new widget - notifications mobile info - has been added as well. Finally, certain unnecessary parts of the previously implemented code have been removed, improving the code clarity and maintainability.

--- a/apps/dapp/index.html
+++ b/apps/dapp/index.html
@@ -7,13 +7,12 @@
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-    <link rel="preload" href="src/main.ts" as="script">
     <script type="module" src="src/main.ts" async></script>
 
     <link rel="preload" href="fonts/Inter/Inter-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/Inter/Inter-Medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/Inter/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="audio/unicorn-run.mp3" type="audio" crossorigin>
+    <link rel="preload" href="audio/unicorn-run.mp3" as="audio" type="audio/mpeg" crossorigin="anonymous">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
     <meta name="apple-mobile-web-app-title" content="1inch dApp" />
